--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hng-stage2",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "http-proxy-middleware": "^3.0.0",
     "next": "14.2.4",
     "react": "^18",
     "react-css-spinners": "^4.0.2",
